kubernetes/booking-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: online-event-booking-raheem
  labels:
    app: booking-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: abdullahaslam007/cs4067-assignment-02-22i0777-abdurraheem-booking-service:latest  # Change this to your actual Docker Hub image
          ports:
            - containerPort: 3003
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: online-event-booking-raheem
spec:
  selector:
    app: booking-service
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
  type: ClusterIP
